syntax = "proto3";
package payment_v1;
import "google/protobuf/timestamp.proto";
import "payment/v1/paymentProviderMessage.proto";


enum PaymentStatus {
  PENDING = 0;
  PARTIAL = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message PaymentItem {
  string id = 1;
  string productId = 2;
  double amount = 3;
  int32 qty = 4;
  google.protobuf.Timestamp crated_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp discardedAt = 7;
}

message Payment {
  string id = 1;
  string code = 2;
  repeated PaymentItem Items = 3;
  double totalPrice = 4;
  PaymentStatus status = 5;
  payment_v1.Provider provider = 6;
  string userId = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp updatedAt = 9;
  google.protobuf.Timestamp discardedAt = 10;
}

// REQUEST / RESPONSE

message CreatePaymentRequest {
  PaymentItem items = 1;
  string userId = 2;
  double amount = 3;
  string providerId = 4;
}

message PaymentOrderDelayedCancelledRequest {
  string id = 1;
}

message CallBackPaymentRequest {
  string payment_id = 1;
  double amount = 2;
}

message FindPaymentByIdRequest {
  string id = 1;
}

message FindPaymentByUserIdAndStatusRequest {
  string userId = 1;
  PaymentStatus status = 2;
}